# CheckPointStore

./: CMakeLists.txt  CheckStore 原型系统设计 v1.1 (1).docx  README.md  main.cpp
include/core/: CheckpointManager.h  Common.h  CompressionScheduler.h  Config.h  DependencyGraph.h  IntegrityVerifier.h  MainDaemon.h  Metadata.h  StorageEngine.h
src/cli/: CLI.cpp
src/core/: CheckpointManager.cpp  Common.cpp  CompressionScheduler.cpp  Config.cpp  DependencyGraph.cpp  IntegrityVerifier.cpp  MainDaemon.cpp  Metadata.cpp  StorageEngine.cpp
